--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,15 @@
-* {
-    
-    text-align: center;
 body {
-    margin: 0;
-    background-color: black;
-}
+    background:linear-gradient(to right, rgb(0, 0, 130), rgb(68, 68, 243));
 }
 #container {
-    background-color: blue;
-    margin: 10rem auto;
+    background: linear-gradient(to right, rgb(0, 0, 130), rgb(68, 68, 243));
+    margin: 0;
     padding: 5rem;
-    position: center;
+    position: top;
     align-items: center;
     border-radius: 30px;
+    text-align: center;
+    min-width: 5rem;
 }
 
 #result {
@@ -22,19 +19,23 @@ body {
     position: center;
     align-items: center;
     border-radius: 30px;
+    box-shadow: 20px 20px 100px rgba(200, 0, 80, 130);
+    background-image: linear-gradient(120deg, #e06711 50%, red 50%)
+    
 }
 
 #btn {
     font-size: 50px;
     cursor: pointer;
     border-radius: 30px;
-    padding: 10px
+    padding: 10px;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
 }
 
 #resetbtn, #minusbtn {
     font-size: 30px;
     border-radius: 30px;
-    background-color: red;
+    background-color: gold;
     margin-left: 0;
     cursor: pointer;
     padding: 10px;
@@ -42,6 +43,5 @@ body {
 }
 
 #minusbtn {
-
-    background-color: greenyellow;
+    background-color: purple;
 }
